Added color finder with dummy  json data

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-image: url('https://static-cse.canva.com/image/3067/mint2.c0f21b5d.png');
+  background-repeat: "no-repeat";
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
